--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,15 @@
 # Site Settings
-title:               Lagrange
-tagline:             a minimalist Jekyll theme
-description:
-baseurl:            #"/Lagrange"
-url:                #"https://lenpaul.github.io"
+title:               暮星
+tagline:             Enjoy Code Enjoy Life
+description:         个人博客
+baseurl:            #"/"
+url:                #"https://muxing1991.github.io"
 github:
-  url:               #"https://lenpaul.github.io/Lagrange"
+  url:               #"https://muxing1991.github.io"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "Muxing"
+  email:             "594445961@qq.com"
+  github:            "muxing1991"
 navigation:
 - title: About
   url: /about
