--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title:               暮星
+title:               Muxing
 tagline:             Enjoy Code Enjoy Life
 description:         个人博客
 baseurl:            #"/"
