4月5号的更新

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title:               Muxing
-tagline:             Enjoy Code Enjoy Life
+tagline:             Whatever you do, do it as professional.
 description:         个人博客
 baseurl:            #"/"
 url:                #"https://muxing1991.github.io"
